add font and change shadcn

--- a/src/widgets/Header/style.module.scss
+++ b/src/widgets/Header/style.module.scss
@@ -1,6 +1,7 @@
 .inputSearch {
   background-color: #f9f9f9;
   outline: none;
+  width: 765px;
 
   &::-webkit-search-cancel-button {
     -webkit-appearance: none;
