--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,25 @@
         @apply bg-background text-foreground;
     }
 }
+
+@font-face {
+    font-family: Nunito;
+    src: url("./../fonts/Nunito-Bold.ttf") format('truetype');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: Nunito;
+    src: url("./../fonts/Nunito-SemiBold.ttf");
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: Nunito;
+    src: url("./../fonts/Nunito-Regular.ttf");
+    font-weight: 400;
+}
+
+*{
+    font-family: Nunito;
+}
